--- a/style.css
+++ b/style.css
@@ -423,6 +423,7 @@ button {
     }
 
      .completed-content-rs-image {
+        background-size: contain;
         width: 339px;
         height: 241px;
     
@@ -431,6 +432,8 @@ button {
 
 
 /* CONTROL */
+
+
 .control {  
     margin-top: -300px;
 }
@@ -547,9 +550,12 @@ button {
     border: none;
     border-bottom: 1.5px solid rgba(54, 54, 54, 0.3);
     width: 231px;
+    padding-bottom: 8px;
 }
 .control-content-form-input input::placeholder {
-
+    font-size: 14px;
+    line-height: 23px;
+    color: #363636; 
 }
    
 .control-content-form-input span {
@@ -566,5 +572,132 @@ button {
     border-radius: 2px;
 }
 
+
+@media screen and (max-width: 1300px) {
+    .control {
+        margin-top: 0px;
+        color: white;
+        background-color: #131313;  
+    }
+    .control-content {
+        text-align: center;
+        margin: 0 auto;
+        padding-bottom: 0;
+    }
+    .control-content-title {
+        color: white;
+        font-size: 20px;
+        line-height: 28px;
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 13px;
+    }
+    .control-content-logo {
+        margin: 0 auto;
+        position: relative;
+        background-image: url(./assets/control/camera.svg);
+        width: 33px;
+        height: 28px;
+        margin-bottom: 31px;
+    }
+    
+    .control-content-logo::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 125%;
+        width: 32px;
+        height: 1.5px;
+        background: #E3B873;
+        border-radius: 30px;
+    }
+    .control-content-logo::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        right: 125%;
+        width: 32px;
+        height: 1.5px;
+        background: #E3B873;
+        border-radius: 30px;
+    }
+    .control-content-video {
+        width: 339px;
+        height: 207px;
+        margin-bottom: 28px;
+        background-size: contain;
+    }
+    .control-content-video::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
+    }
+    .control-content-video::after {
+        width: 37px;
+        height: 37px;
+        background-size: 12px 12px;
+    }
+    .control-content-line {
+        margin-bottom: 28px;
+    }
+    .control-content-disc {
+        font-size: 11px;
+        line-height: 169.8%;
+        width: 339px;
+        margin-bottom: 61px;
+    }
+    .control-content-form {
+        margin: 0 auto;
+        width: 817px;
+    }
+    
+    .control-content-form div:first-child {
+        display: flex;
+        margin: 0 auto;
+        flex-direction: column;
+        margin-bottom: 25px;
+        margin: 0;
+    }
+    .control-content-form-input {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    
+    .control-content-form-input input {
+        border: none;
+        background: none;
+        border-bottom: 1.5px solid white;
+        width: 339px;
+        padding-bottom: 8px;
+    }
+    .control-content-form-input input:first-child {
+        margin-bottom: 63px;
+        
+    }.control-content-form-input input:last-child {
+        margin-bottom: 28px;
+        
+    }
+    .control-content-form-input input::placeholder {
+        color: white; 
+    }
+       
+    .control-content-form-input span {
+        font-size: 13px;
+        line-height: 21px;
+        color: rgba(255, 255, 255, 0.5);
+        align-self: flex-start;
+        margin-bottom: 7px;
+    }
+    .control-content-button {
+        width: 339px;
+    }
+    
+}
 
 
